Add API for patching access token
